filegroup(
    name = "aoc_session_cookie",
    visibility = ["//util:__pkg__"],
    srcs = [".session_cookie"],
)

genrule(
    name = "gen_test_inputs",
    outs = [
        "test1.csv",
        "test2.csv",
        "test3.csv",
        "test4.csv",
        "test5.csv",
    ],
    cmd = "$(location :test_input_generator) && cp *.csv $(@D)/",
    tools = [":test_input_generator"],
)