[package]
name = "compile_with_bazel"
version = "0.1.0"

[dependencies]
num_enum = "0.4.2"
thiserror = "1.0"
anyhow = "1.0"
log = {version = "0.4.8", features = ["std"]}
pretty_env_logger = "0.3.1"
itertools = "0.8"

[lib]
path = "fake_lib.rs"

[raze]
workspace_path = "//cargo"
target = "x86_64-unknown-linux-gnu"

[raze.crates.proc-macro2.'0.4.30']
additional_flags = [
    "--cfg=use_proc_macro",
]


[raze.crates.proc-macro2.'1.0.6']
additional_flags = [
    "--cfg=use_proc_macro",
]

[raze.crates.log.'0.4.8']
additional_flags = [
    "--cfg=atomic_cas"
]

# [raze.crates.regex.'1.1.6']
# additional_deps = [
#   # Add an unused dep
#   "//complicated_cargo_library/cargo/vendor:specs"
# ]
# additional_flags = [
#   # Add an unused flag
#   "--cfg=not_used"
# ]

# [raze.crates.clang-sys.'0.21.1']
# gen_buildrs = true

# [raze.crates.conduit-mime-types.'0.7.3']
# data_attr = "glob([\"data/**\"])"