package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_binary",
)

haskell_toolchain_library(name = "base")

haskell_binary(
    name = "solution",
    srcs = ["day01.hs"],
    deps = [
       # ":base",
        "@stackage//:base",
        "@stackage//:bazel-runfiles"
    ],
    data = ["//util:input_01"]
)