package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_binary",
)

haskell_toolchain_library(name = "base")


# TODO load bazel runfiles via the rules repo, as that is probably cheaper (?)
haskell_binary(
    name = "day01",
    srcs = ["day01.hs"],
    deps = [
       # ":base",
        "@stackage//:base",
        "@stackage//:bazel-runfiles"
    ],
    data = ["//util:input_01"]
)