package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library", "rust_doc_test")

rust_library(
    name = "intcode_computer",
    srcs = [
        "src/lib.rs",
        "src/error.rs",
        "src/opcode.rs",
        "src/virtual_machine.rs"
    ],
    deps = [
        "//cargo:num_enum",
        "//cargo:log",
        "//cargo:thiserror",
    ],
    edition = "2018",
)