package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library", "rust_test", "rust_doc_test")

rust_library(
    name = "intcode_computer",
    srcs = [
        "src/lib.rs",
        "src/error.rs",
        "src/memory.rs",
        "src/opcode.rs",
        "src/virtual_machine.rs",
        "src/util.rs"
    ],
    deps = [
        "//cargo:num_enum",
        "//cargo:log",
        "//cargo:thiserror",
    ],
    edition = "2018",
)

rust_test(
    name = "intcode_computer_test",
    crate = ":intcode_computer",
    timeout="short"
)