package(default_visibility = ["//visibility:public"])

# filegroup(
#     name = "aoc_session_cookie",
#     visibility = ["//util:__pkg__"],
#     srcs = [".session_cookie"],
# )

py_binary(
    name = "download_aoc_inputs",
    srcs = ["download_aoc_inputs.py"],
    deps = ["@rules_python//python/runfiles"],
    data = [
        ":.session_cookie"
    ]
)

genrule(
    name = "aoc_inputs",
    outs = [
        "input_01",
        "input_02",
        "input_03",
        "input_04",
        "input_05",
        "input_06",
        "input_07",
        "input_08",
        "input_09",
        "input_10",
        "input_11",
        "input_12",
        "input_13",
        "input_14",
        "input_15",
        "input_16",
        "input_17",
        "input_18",
        "input_19",
        "input_20",
        "input_21",
        "input_22",
        "input_23",
       # "input_24",
       # "input_25",
    ],
    # srcs = [
    #     ":aoc_session_cookie"
    # ],
    cmd = "$(location //util:download_aoc_inputs) 2019 && cp input_* $(@D)/",
    tools = [":download_aoc_inputs"],
)